# synthform

./: .gitignore  .prettierrc.mjs  CLAUDE.md  Dockerfile  LOGGING.md  README.md  docker-compose.prod.yml  docker-compose.yml  emotes.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
apps/overlays/: eslint.config.js  index.html  package.json  vite.config.ts
apps/overlays/src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
apps/overlays/src/components/coworking/: alert.tsx  campaign.tsx  index.tsx  limitbreak.tsx  music.tsx  status.tsx
apps/overlays/src/components/effects/: emote-manager.ts  emote-rain.tsx
apps/overlays/src/components/omnibar/: index.tsx  limitbreak.tsx  timeline.tsx
apps/overlays/src/components/shared/: alert.tsx  campaign.tsx
apps/overlays/src/components/special/: podcast.tsx  umamusume.tsx
apps/overlays/src/config/: alert-sounds.ts  emotes.ts  sounds.ts  timeline.ts
apps/overlays/src/hooks/: use-alert-sound.ts  use-alerts.ts  use-campaign.ts  use-chat-messages.ts  use-emote-sprite-sheet.ts  use-ffbot.ts  use-limitbreak.ts  use-music.ts  use-obs.ts  use-questlog.ts  use-rme.ts  use-server.ts  use-status.ts  use-timeline.ts
apps/overlays/src/lib/: animations.ts  audio-preloader.ts
apps/overlays/src/routes/: __root.tsx  coworking.tsx  music.tsx  omnibar.tsx
apps/overlays/src/store/: realtime.ts
apps/overlays/src/types/: events.ts  music.ts  obs.ts  server.ts
apps/server/: .env.example  Dockerfile  main.py  manage.py  pyproject.toml
apps/server/ads/: apps.py  consumers.py  services.py  tasks.py
apps/server/audio/: admin.py  apps.py  consumers.py  models.py  processor.py  routing.py  session_manager.py  tasks.py
apps/server/audio/migrations/: 0001_initial.py  0002_session_unique_active_session.py  0003_delete_chunk.py  0004_delete_session.py
apps/server/audio/services/: __init__.py  rme.py
apps/server/authentication/: admin.py  apps.py  models.py  services.py
apps/server/authentication/migrations/: 0001_initial.py  0002_migrate_tokens_from_events.py  0003_rename_token_indexes.py
apps/server/campaigns/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  test_campaign_activation.py  test_integration.py  test_models.py  test_services.py  test_subathon_mode.py  tests.py
apps/server/campaigns/fixtures/: 25th-anniversary-milestones.json
apps/server/campaigns/management/commands/: campaign_milestones.py  campaign_test_data.py
apps/server/campaigns/migrations/: 0001_initial.py  0002_remove_announcement_text.py  0003_gift.py
apps/server/campaigns/tests/: test_twitch_gifts.py
apps/server/events/: __init__.py  admin.py  apps.py  consumers.py  models.py  tasks.py  test_stream_events.py  tests.py  urls.py  views.py
apps/server/events/management/commands/: create_reward.py  list_emotes.py
apps/server/events/migrations/: 0001_initial.py  0002_remove_event_events_even_correla_2f9f43_idx_and_more.py  0002_token.py  0003_alter_token_access_token_alter_token_refresh_token.py  0003_remove_token.py
apps/server/events/services/: music.py  rainwave.py  twitch.py  twitch.py.backup
apps/server/games/ffbot/: admin.py  api.py  apps.py  consumers.py  models.py
apps/server/games/ffbot/migrations/: 0001_initial.py  0002_rename_to_player_add_uuid.py  0003_add_created_at.py  0004_remove_old_db_table.py
apps/server/games/ironmon/: admin.py  apps.py  ironmon_data.sql  models.py  service.py
apps/server/games/ironmon/management/commands/: run_ironmon_tcp.py
apps/server/games/ironmon/migrations/: 0001_initial.py
apps/server/overlays/: apps.py  consumers.py  utils.py
apps/server/quotes/: admin.py  api.py  apps.py  models.py  schemas.py
apps/server/quotes/migrations/: 0001_initial.py
apps/server/shared/services/twitch/: __init__.py  helix.py  service.py
apps/server/streams/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  signals.py  tasks.py  test_obs_performance.py  tests.py
apps/server/streams/migrations/: 0001_initial.py  0002_migrate_to_uuid_ids.py  0003_update_model_definition.py  0004_status.py  0005_status_singleton.py  0006_add_session_duration_tracking.py  0007_backport_session_durations.py
apps/server/streams/services/: obs.py
apps/server/synthform/: asgi.py  celery.py  health.py  settings.py  settings_test.py  urls.py  wsgi.py
apps/server/synthform/management/commands/: syncdb.py
apps/server/transcriptions/: admin.py  apps.py  models.py
apps/server/transcriptions/migrations/: 0001_initial.py  0002_remove_legacy_stream_session_id.py
public/: emotes.json
src/: index.css  routeTree.gen.ts  vite-env.d.ts
src/api/: homeassistant.ts  pagination.ts  synthhome.ts  tempest.ts
src/components/coworking/: music.tsx  status.tsx
src/components/effects/: emote-manager.ts
src/components/omnibar/: alerts.tsx  base.tsx  limitbreak.tsx
src/components/shared/: alert.tsx  campaign.tsx
src/components/shared/timeline/: events.tsx  item.tsx
src/components/special/: podcast.tsx  umamusume.tsx
src/components/ui/: chyron.tsx  icons.tsx
src/config/: events.ts  sounds.ts
src/hooks/: index.ts  use-alert-sound.ts  use-alerts.ts  use-campaign.ts  use-chat-messages.ts  use-emote-sprite-sheet.ts  use-enphase.ts  use-github.ts  use-homeassistant.ts  use-limitbreak.ts  use-music.ts  use-network.ts  use-obs-screenshot.ts  use-obs.ts  use-pipeline-test.ts  use-questlog.ts  use-rme.ts  use-server.ts  use-sparkline.ts  use-status.ts  use-steam.ts  use-subathon-timer.ts  use-tempest.ts  use-time.ts  use-timeline.ts
src/lib/: animations.ts
src/routes/: __root.tsx  audio.tsx  limitbreak.tsx  music.tsx
src/routes/(full)/: coworking.tsx  emote-rain.tsx  hud.tsx  intro.tsx
src/routes/acnh/: villager-hunt.tsx
src/routes/debug/: events.tsx  homeassistant.tsx  hud-styles.tsx  ironmon.tsx  server.tsx  transcription.tsx
src/routes/special/: podcast.tsx  umamusume.tsx
src/routes/telestrator/: index.tsx  output.tsx
src/store/: realtime.ts
src/types/: campaign.ts  server.ts  telestrator.ts
(+18 files in other folders)
