[project]
name = "server"
version = "0.1.0"
description = "Synthform's Central Brain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels[daphne]>=4.3.1",
    "django>=5.2.5",
    "twitchio[starlette]>=3.1.0",
    "psycopg>=3.2.1",
    "django-environ>=0.11.2",
    "obsws-python>=1.8.0",
    "redis>=5.2.0",
    "channels-redis>=4.3.0",
]
