[project]
name = "server"
version = "0.1.0"
description = "Synthform's Central Brain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels[daphne]>=4.3.2",
    "django>=5.2.5",
    "twitchio[starlette]>=3.1.0",
    "psycopg>=3.3.0",
    "django-environ>=0.11.2",
    "obsws-python>=1.8.0",
    "redis>=5.2.0",
    "channels-redis>=4.3.0",
    "ruff>=0.12.10",
    "django-fernet-encrypted-fields>=0.3.0",
    "celery>=5.6.0",
    "numpy>=1.24.0",
    "websockets>=12.0",
    "whitenoise>=6.8.2",
    "sentry-sdk[django]>=2.37.0",
    "httpx>=0.25.0",
    "python-osc>=1.8.0",
    "django-ninja>=1.5.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".hg",
  ".mypy_cache",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "migrations",
  "node_modules",
  "venv"
]
extend-include = ["*.pyi?"]
indent-width = 4
# Same as Black.
line-length = 88
# Assume Python >=3.13.
target-version = "py313"

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
ignore = [
  "E501",    # line-too-long (handled by formatter)
  "E741",    # ambiguous-variable-name (temporary)
  "S101",    # assert (fine in tests)
  "S104",    # hardcoded-bind-all-interfaces (acceptable for local dev)
  "S603",    # subprocess-without-shell-equals-true (legitimate use cases)
  "S607",    # start-process-with-partial-path (legitimate use cases)
  "S311",    # suspicious-non-cryptographic-random-usage (not always needed)
  "RUF005",  # collection-literal-concatenation (readability preference)
  "RUF010",  # explicit-f-string-type-conversion (stylistic preference)
  "RUF012",  # mutable-class-default (Django Meta/Admin standard patterns)
  "RUF019",  # unnecessary-key-check (false positive when checking existence AND truthiness)
  "RUF100",  # unused-noqa (protective directives, especially in test files)
  "DJ001",   # django-nullable-model-string-field (sometimes needed for optional fields)
  "UP038",   # non-pep604-isinstance (deprecated rule, will be removed)
]
select = [
  "B",    # flake8-bugbear (catches real bugs)
  "C4",   # flake8-comprehensions (better comprehension patterns)
  "DJ",   # flake8-django (Django best practices)
  "E",    # Pycodestyle (code style)
  "F",    # Pyflakes (undefined names, unused imports)
  "I",    # isort (import sorting)
  "RUF",  # Ruff-specific rules (caught critical asyncio issues)
  "UP",   # pyupgrade (modern Python syntax)
]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = []
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
